# src/Controller/Api/ProductController.php
@@ -29,6 +29,42 @@ class ProductController extends BaseApiController
   }
 
   /**
+   * @Route("/top-products", methods={"GET"})
+   *
+   *   @OA\Get(
+   *     path="/top-products",
+   *     summary="List Top 20 Products",
+   *     operationId="top-products-list",
+   *     tags={"Product"},
+   *
+   *   @OA\Response(
+   *     response=200,
+   *     description="Top 20 products list",
+   *     @OA\JsonContent(
+   *       type="object",
+   *       @OA\Property(
+   *         property="items",
+   *         type="array",
+   *         @OA\Items(ref="#/components/schemas/Product")
+   *       )
+   *     )
+   *   ),
+   *   @OA\Response(response=404, ref="#/components/responses/404"),
+   *   @OA\Response(response=500, ref="#/components/responses/500")
+   * )
+   */
+  public function topProducts(): JsonResponse
+  {
+    $products = $this->repository->getTopProducts();
+
+    if ($products === null) {
+      throw $this->createNotFoundException(sprintf('There are no available products'));
+    }
+
+    return new JsonResponse($this->serializeCollection($products, true));
+  }
+
+  /**
    * @Route("/", methods={"GET"})
    *
    * @OA\Get(
@@ -63,6 +99,20 @@ class ProductController extends BaseApiController
    *      name="lastId",
    *      in="query",
    *      description="Set last id of item to get another 20 items",
+   *      required=false
+   *   ),
+   *   @OA\Parameter(
+   *     @OA\Schema(type="string"),
+   *      name="sortBy",
+   *      in="query",
+   *      description="Set order by param, currently can set price or name",
+   *      required=false
+   *   ),
+   *   @OA\Parameter(
+   *     @OA\Schema(type="string"),
+   *      name="dir",
+   *      in="query",
+   *      description="Set order by direction, allowed values are asc or desc",
    *      required=false
    *   ),
    *
@@ -109,13 +159,24 @@ class ProductController extends BaseApiController
       $this->repository->setLastId($request->query->get(BaseApiController::LAST_ID));
     }
 
+    if ($request->query->has(BaseApiController::SORT_BY)) {
+      $sortBy = $request->query->get(BaseApiController::SORT_BY);
+      $dir = 'asc';
+
+      if ($request->query->has(BaseApiController::SORT_DIR)) {
+        $dir = $request->query->get(BaseApiController::SORT_DIR);
+      }
+
+      $this->repository->setOrderBy($sortBy, $dir);
+    }
+
     $products = $this->repository->collection();
 
     if ($products === null) {
       throw $this->createNotFoundException(sprintf('There are no available products'));
     }
 
-    return new JsonResponse($this->serializeCollection($products));
+    return new JsonResponse($this->serializeCollection($products, true));
   }
 
   /**
@@ -153,6 +214,16 @@ class ProductController extends BaseApiController
     }
 
     return new JsonResponse($this->serializeObject($product, true));
+  }
+
+  protected function serializeCollection($collection, $withOffers = false): array
+  {
+    $items = [];
+    foreach ($collection as $item) {
+      $items[] = $this->serializeObject($item, $withOffers);
+    }
+
+    return ['items' => $items];
   }
 
   protected function serializeObject($object, $withOffers = false)
